<resources>
    <string name="app_name">アラームアプリ</string>
    <string name="title_item_detail">Item Detail</string>

    <string name="alarm_list_add">追加</string>
    <string name="alarm_list_comp">完了</string>

    <string name="alarm_set">アラーム設定</string>
    <string name="alarm_set_memo">メモ</string>
    <string name="alarm_set_sound">アラーム音</string>
    <string name="alarm_set_message">アラームメッセージ</string>
    <string name="alarm_set_save">保存</string>
    <string name="alarm_set_cancel">キャンセル</string>
    <string name="alarm_set_delete">削除</string>

    <string name="circle_info_info">サークル情報</string>
    <string name="circle_info_description">WEBマンガのキャラクターを使用しています。よかったらWEBマンガの方もご覧ください。</string>
    <string name="circle_info_read">WEBマンガを読む(外部サイトに遷移)</string>
    <string name="circle_info_read_uri">https://www.yahoo.co.jp</string>
    <string name="circle_info_msg_subscribed">Subscribed to news topic</string>
    <string name="circle_msg_token_fmt" translatable="false">InstanceID Token: %s</string>

    <string name="config_usage">使い方</string>
    <string name="config_usage_content">使い方説明の内容</string>
    <string name="config_version">バージョン</string>
    <string name="config_version_content">バージョン説明の内容</string>
    <string name="config_setting">設定</string>
    <string name="config_setting_voice">アラーム停止後のボイス再生</string>
    <string name="info_config_cfc">info_config_cfc</string>
    <string name="title_activity_main2">Main2Activity</string>
</resources>
