<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="?android:attr/textAppearanceLarge"
    android:id="@+id/item_detail"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".alarmSet.AlarmDetailActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TimePicker
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:calendarViewShown="false"
            android:timePickerMode="spinner"
            android:id="@+id/timePicker" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/alarm_set_sound"
            android:textColor="@color/colorPrimary"
            android:id="@+id/textView_sound" />
        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spinner_sound" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/alarm_set_message"
            android:textColor="@color/colorPrimary"
            android:id="@+id/textView_message" />
        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spinner_message" />

        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/alarm_set_memo"
            android:textColor="@color/colorPrimary"
            android:id="@+id/textView_memo" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="30"
            android:id="@+id/editText_memo" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/alarm_set_save"
                android:id="@+id/button_save" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/alarm_set_cancel"
                android:id="@+id/button_cancel"
                android:layout_gravity="center_horizontal" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/alarm_set_delete"
                android:id="@+id/button_delete"
                android:layout_gravity="center_horizontal" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="index"
            android:visibility="invisible"
            android:id="@+id/textView_alarm_no" />
    </LinearLayout>

</LinearLayout>



